Making models comply with the domain name

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -57,7 +57,7 @@ play.evolutions.autoApply=true
 play.evolutions.useLocks=true
 
 # For EBean we need to set the configuration
-ebean.default = ["models.*"]
+ebean.default = ["xyz.gadre.jentity.models.*"]
 logger.com.jolbox=DEBUG
 
 # You can disable evolutions for a specific datasource if necessary
